feat: Refactor agent configuration and improve documentation
- Refactor agent configuration:
  - Moved SYSTEM_PROMPT to agente_ga4/prompts.py.
  - Moved agent configuration to agente_ga4/config.py.
  - Updated agente_ga4/agent.py to use new configuration files.
- Update tools.yaml:
  - Changed BigQuery query to daily_visits.
  - Renamed tool to get_daily_visits for consistency.
- Improve documentation:
  - Fixed typo in gcloud run deploy command in README.md.
  - Added Python dependencies installation to README.md.
  - Added gcloud auth application-default login to README.md.
  - Updated pip install command in GEMINI.md.
- Clean up project files:
  - Deleted gcloud-sa-key.json (security best practice).
  - Deleted venv_broken (old virtual environment).
  - Deleted test_genai.py (temporary test script).
  - Deleted run_mcp_toolbox.sh (no longer needed for primary workflow).
- Added .gitignore to ignore __pycache__ directories.

--- a/agent/mcp_toolbox/tools.yaml
+++ b/agent/mcp_toolbox/tools.yaml
@@ -1,21 +1,19 @@
 sources:
-  - name: ga_daily_visits
-    bigquery:
-      query: |
-        SELECT
-            fullVisitorId,
-            visitId,
-            visitStartTime,
-            date,
-            totals,
-            trafficSource,
-            device,
-            geoNetwork
-        FROM
-            `bigquery-public-data.google_analytics_sample.ga_sessions_*`
-        WHERE
-            _TABLE_SUFFIX = @date
-      project: agentemarketing
-      params:
-        - name: date
-          type: string
+ my-bq-source:
+   kind: bigquery
+   project: agentemarketing
+
+tools:
+ get_daily_visits:
+   kind: bigquery-sql
+   source: my-bq-source
+   statement: |
+    SELECT *
+    FROM `bigquery-public-data.google_analytics_sample.daily_visits`
+    LIMIT 5
+   description: |
+    Use this tool to get information on daily website visits from Google Analytics.
+
+toolsets:
+ my_bq_toolset:
+   - get_daily_visits
