feat: Add Agent Engine deployment and documentation
- Add 'toolbox_core' dependency for Agent Engine deployment.
- Add detailed documentation for the Agent Engine deployment process in GEMINI.md.
- Add new deployment scripts in agent/agente_ga4/deployment/.
- Update .gitignore and README.md.

--- a/agent/agente_ga4/requirements.txt
+++ b/agent/agente_ga4/requirements.txt
@@ -1,5 +1,5 @@
-google-adk
-google-cloud-aiplatform[agent_engines]
+google-cloud-aiplatform[agent_engines,adk]
 cloudpickle
 mcp
 PyYAML
+toolbox_core
